--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,7 @@
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
+  "prefer_related_applications": "false",
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,6 +22,12 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "logo512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
