--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
