--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.3.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
