--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gusto-react",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^2.0.0",
@@ -13,6 +12,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-cookie-consent": "^6.3.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
